Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8, 12.2(EOL)
-
Can result in hang or crash
-
Description
As pointed by Kristian neither replication tests nor production slave server configuration should not instruct the server to ignore --slave_skip_errors=1927 ER_CONNECTION_KILLED error on the parallel slave.
This ticket is to make sure the slave service to examine any skipped errors on this matter
and don't if the error is in the skip-list.
Attachments
Issue Links
- split from
-
MDEV-21107 Assertion `!tmp_gco->next_gco || tmp_gco->last_sub_id > sub_id' failed in finish_event_group
-
- Stalled
-