MDEV-38624: prevent parallel slave from skipping ER_CONNECTION_KILLED error