sql/log_event_server.cc
@@ -303,6 +303,10 @@ inline int idempotent_error_code(int err_code)
 
 inline int ignored_error_code(int err_code)
 {
+  // Force slave to stop on this error even if in --slave-skip-errors
+  if (err_code == ER_CONNECTION_KILLED)
+    return 0;
+
   if (use_slave_mask && bitmap_is_set(&slave_error_mask, err_code))
   {
     statistic_increment(slave_skipped_errors, LOCK_status);
